refactor: migrate to lerna managed workspace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "module": "NodeNext"
   },
   "include": [
-    "src"
+    "packages/*/src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
