--- a/packages/sip--um-actually/package.json
+++ b/packages/sip--um-actually/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agents-examples-node-sip-um-actually",
+  "name": "@node-agents-examples/sip-um-actually",
   "version": "0.0.0",
   "description": "A LiveKit Agent that hosts a game of 'Um, Actually' with contestants that call in, using OpenAI's capabilities to process and respond to voice calls",
   "engines": {
@@ -10,12 +10,12 @@
   "author": "Michael Solati <michael.solati@livekit.io>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/livekit-examples/agents-examples-node.git"
+    "url": "git+https://github.com/livekit-examples/node-agents-examples.git"
   },
   "bugs": {
-    "url": "https://github.com/livekit-examples/agents-examples-node/issues"
+    "url": "https://github.com/livekit-examples/node-agents-examples/issues"
   },
-  "homepage": "https://github.com/livekit-examples/agents-examples-node/sip/um-actually#readme",
+  "homepage": "https://github.com/livekit-examples/node-agents-examples/sip/um-actually#readme",
   "scripts": {
     "start": "dotenvx run -f .env.local -- tsx src/agent.ts dev",
     "setup:twilio": "dotenvx run -f .env.local -- tsx src/setup-twilio.ts",
@@ -26,19 +26,10 @@
     "fix": "gts fix"
   },
   "dependencies": {
-    "@livekit/agents": "^0.7.1",
-    "@livekit/agents-plugin-openai": "^0.9.0",
     "@livekit/rtc-node": "^0.13.8",
-    "livekit-server-sdk": "^2.11.0",
     "twilio": "^5.5.1"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.39.0",
-    "@types/node": "^22.13.17",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "gts": "^6.0.2",
-    "npm-run-all": "^4.1.5",
-    "tsx": "^4.19.3",
-    "typescript": "^5.6.3"
+    "@dotenvx/dotenvx": "^1.39.0"
   }
 }
