--- a/packages/basics/package.json
+++ b/packages/basics/package.json
@@ -24,7 +24,20 @@
     "lint:gts": "gts lint",
     "fix": "gts fix"
   },
+  "dependencies": {
+    "@dotenvx/dotenvx": "^1.39.0",
+    "@livekit/agents": "^0.7.1",
+    "@livekit/agents-plugin-deepgram": "^0.5.4",
+    "@livekit/agents-plugin-openai": "^0.9.0",
+    "@livekit/agents-plugin-silero": "^0.5.5",
+    "livekit-server-sdk": "^2.11.0"
+  },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.39.0"
+    "@types/node": "^22.13.17",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "gts": "^6.0.2",
+    "npm-run-all": "^4.1.5",
+    "tsx": "^4.19.3",
+    "typescript": "^5.6.3"
   }
 }
