--- a/packages/sip--um-actually/package.json
+++ b/packages/sip--um-actually/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/livekit-examples/node-agents-examples/sip/um-actually#readme",
   "scripts": {
-    "start": "dotenvx run -f .env.local -- tsx src/agent.ts dev",
+    "start": "tsx src/agent.ts dev",
     "setup:twilio": "dotenvx run -f .env.local -- tsx src/setup-twilio.ts",
     "setup:livekit": "dotenvx run -f .env.local -- tsx src/setup-livekit.ts",
     "lint": "npm-run-all -s lint:*",
@@ -26,10 +26,19 @@
     "fix": "gts fix"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.39.0",
+    "@livekit/agents": "^0.7.1",
+    "@livekit/agents-plugin-openai": "^0.9.0",
     "@livekit/rtc-node": "^0.13.8",
-    "twilio": "^5.5.1"
+    "livekit-server-sdk": "^2.11.0"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.39.0"
+    "@types/node": "^22.13.17",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "gts": "^6.0.2",
+    "npm-run-all": "^4.1.5",
+    "tsx": "^4.19.3",
+    "twilio": "^5.5.1",
+    "typescript": "^5.6.3"
   }
 }
